fixed alignment
implement: https://bootstrapbay.com/blog/working-bootstrap-contact-form/

--- a/index.css
+++ b/index.css
@@ -37,8 +37,8 @@ li a {
     
     color: white;
     font-size: 25px;
-    font-family: 'ABeeZee', sans-serif;
-    font-weight: 300;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 500;
     /*dimensions*/
     
     list-style-type: none;
@@ -56,8 +56,8 @@ li a {
     float: left;
     text-align: center;
     height: 35px;
-    padding-top: 18px;
-    padding-bottom: 12px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     transition: .5s;
 }
 .alarm-header,
@@ -191,7 +191,7 @@ li a {
 }
 #intro-text-div {
     width: 49.7%;
-	color: white;
+	color: black;
 }
 #intro-image-div {
     width: 49.7%;
@@ -208,10 +208,7 @@ li a {
 /*contact*/
 #contact-div{
 	background-color: #F44336;
-	
-	
 	overflow: hidden;
-	
 	position: relative;
 	z-index: 9999;
 	-webkit-box-shadow: 0px -2px 10px 0px rgba(0, 0, 0, 0.75);
@@ -235,7 +232,7 @@ li a {
 }
 
 #twitter-icon{
-	padding-top: 12px;
+	padding-top: 18px;
 	height: 25px;
 	width: 31px;
 }
@@ -243,6 +240,7 @@ li a {
 #instagram-icon{
 	height: 29px;
 	width: 29px;
+	padding-top: 16px;
 	margin-left: 1.5%;
 	margin-right: 4%;
 }
@@ -250,6 +248,7 @@ li a {
 	height: 29px;
 	width: 29px;
 	margin-left: 1.5%;
+	padding-top: 16px;
 }
 
 /*animation fades */
